<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuestionActivity">

    <ScrollView
        android:id="@+id/question_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#787878"
                app:titleTextColor="#ffffff"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme">

                <ImageButton
                    android:id="@+id/to_next_question_button_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_right_arrow" />

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/additionalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/additionalMaterial"
                    android:layout_marginStart="10dp"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/additionalMaterialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="24sp"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/additionalMaterialImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:layout_marginStart="10dp"
                    android:textSize="24sp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>

                <TextView
                    android:id="@+id/questionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionTitle"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputAnswerLayout"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/answerInputField"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/writeAnswer"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/questionText" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp"/>

                    <Button
                        android:id="@+id/answerButton"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/readyButton"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/questionText" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp"/>

            <LinearLayout
                android:id="@+id/answerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/answerLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"
                    android:layout_marginStart="10dp"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/correctAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>

                <TextView
                    android:id="@+id/commentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/userAnswerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginStart="10dp"
                    android:textSize="24sp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>

                <TextView
                    android:id="@+id/isCorrectAnswer"
                    android:layout_width="351dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/acceptAnswerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/ok"/>

                    <Button
                        android:id="@+id/rejectAnswerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/nook"/>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>

                <Button
                    android:id="@+id/goToArticleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text=""/>

                <Button
                    android:id="@+id/toNextQuestionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nextQuestion"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>
            </LinearLayout>

        </LinearLayout>




    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/starButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="10dp"
            app:rippleColor="@null"
            app:backgroundTint="@null"
            app:maxImageSize="@android:dimen/app_icon_size"
            app:srcCompat="@drawable/rounded_star_512"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>